# RSR

./: .gitignore  LICENSE  README.md  Singleton.py  compare.ipynb  comparison.ipynb  main.py  multipliers.py  requirements.txt  rsr_test.py  test.py
Notebooks/: bin_mat_prod.ipynb  binary.csv  binary.eps  display.ipynb  k.eps.eps  k_comparison.csv  k_comparison.ipynb  k_comparison_n=32768.csv  memery_consumption.ipynb  memory_binary.eps  multiplication_times_binary.csv  multiplication_times_binary_plus.csv  multiplication_times_binary_plus_2.csv  multiplication_times_ternary.csv  new_binary.eps  new_ternary.eps  plot_figures.ipynb  ternary.eps  time_comparison.ipynb
Notebooks/figures/: k_rsr.eps  k_rsrpp.eps  memory_binary.eps  native_binary_times.eps  native_binary_times_rsr_rsrpp.eps  numpy_binary.eps  numpy_ternary.eps
Notebooks/reports/: compare_k.csv  convert.py  multiplication_times_binary.csv  naive_times.txt  numpy_binary_times.csv  numpy_ternary_times.csv  rsr_times.txt  rsrpp_times.txt
bitnetcpp/: .gitignore  CMakeLists.txt  README.md  bitnet_impl.cpp  bitnet_impl.h  build.sh  clone_bitnet.sh  experiment.sh  generate_weights.py  globals.cpp  globals.hpp  main.cpp  rsr_impl.cpp  rsr_impl.h  steps.txt  time_report.txt  utils.cpp  utils.h
llm/: .gitignore  inference.py  patch.py  requirements.txt
llm/archive/: inference.py  (+1 more)
native/: main  main.cpp  rsr.cpp  rsr.h  run.sh  run_test.sh  utils.cpp  utils.h  visualize.ipynb
numpy_impl/: multipliers_np.py  rsr_test.py
torch_impl/: multipliers.py  profile.sh  rsr_test.py  run_test.sh  time_test.ipynb
(+41 files in other folders)
